# opengl-template

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  create_release.yml
include/glad/: gl.h  glad.h
src/: glad.c  main.cpp
